@@ -29,7 +29,7 @@ clean-generic:
 
 distclean-am: distclean-generic clean-am
 distclean-generic:
-	-rm -f Makefile $(CONFIG_CLEAN_FILES) stamp-h stamp-h[0-9]*
+	-rm -f Makefile $(CONFIG_CLEAN_FILES)
 ?DISTCLEAN?	-test -z "$(DISTCLEANFILES)" || rm -f $(DISTCLEANFILES)
 
 maintainer-clean-am: maintainer-clean-generic distclean-am
