@@ -1,4 +1,4 @@
-@set UPDATED 22 April 2002
-@set UPDATED-MONTH April 2002
+@set UPDATED 6 May 2002
+@set UPDATED-MONTH May 2002
 @set EDITION 1.6a
 @set VERSION 1.6a
